# ear

./: .gitignore  Excercises.hs  Music.hs  Pitch.hs  Player.hs  RandomMusic.hs  Scales.hs  ear.cabal  eartrainer.hs
